stuck with the wraparound issue

--- a/src/PromptUI.css
+++ b/src/PromptUI.css
@@ -1,12 +1,21 @@
 .prompt-oval {
+  min-height: 100px;
+  width : 500px;
   border: 1px solid;
   border-radius: 15px;
-  padding: 5px 10px;
+  padding: 15px 15px 5px;
   margin: 5px;
   display: flex;
-  word-break: break-word;
+  flex-flow: row wrap;
+  word-break: break-all;
 }
 
 .prompt-element {
+  display:inline;
   margin: 0px;
+}
+
+.prompt-element__hint {
+  color: grey;
+  font-size: 10px;
 }
